# simple-linear-regression

./: CMakeLists.txt  README.md  main.cpp  slr.cpp
include/: slr.h
src/: slr.cpp
